--- a/DatabaseLayer/DatabaseLayer.csproj
+++ b/DatabaseLayer/DatabaseLayer.csproj
@@ -8,6 +8,7 @@
     <Version>1.0.0</Version>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>dblayer.snk</AssemblyOriginatorKeyFile>
+    <NoWarn>1701;1702;IDE0063</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
