--- a/DatabaseLayer/DatabaseLayer.csproj
+++ b/DatabaseLayer/DatabaseLayer.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <Authors>Markus Karl Wackermann</Authors>
-    <Version>1.0.1</Version>
+    <Version>2.0.0</Version>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>dblayer.snk</AssemblyOriginatorKeyFile>
     <NoWarn>1701;1702;IDE0063</NoWarn>
@@ -20,7 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
+    <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.4" />
+    <PackageReference Include="SQLitePCLRaw.bundle_e_sqlite3" Version="2.1.8" />
   </ItemGroup>
 
 </Project>
