--- a/DatabaseLayer/DatabaseLayer.csproj
+++ b/DatabaseLayer/DatabaseLayer.csproj
@@ -5,17 +5,19 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <Authors>Markus Karl Wackermann</Authors>
-    <Version>2.0.0</Version>
+    <Version>2.0.1</Version>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>dblayer.snk</AssemblyOriginatorKeyFile>
     <NoWarn>1701;1702;IDE0063</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Sql\AddAdr.sql" />
     <None Remove="Sql\CreateTableAdrs.sql" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Sql\AddAdr.sql" />
     <EmbeddedResource Include="Sql\CreateTableAdrs.sql" />
   </ItemGroup>
 
