--- a/DatabaseLayer/DatabaseLayer.csproj
+++ b/DatabaseLayer/DatabaseLayer.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <Authors>Markus Karl Wackermann</Authors>
-    <Version>2.0.1</Version>
+    <Version>2.0.2</Version>
     <SignAssembly>True</SignAssembly>
     <AssemblyOriginatorKeyFile>dblayer.snk</AssemblyOriginatorKeyFile>
     <NoWarn>1701;1702;IDE0063</NoWarn>
@@ -14,9 +14,13 @@
   <ItemGroup>
     <None Remove="Sql\AddAdr.sql" />
     <None Remove="Sql\CreateTableAdrs.sql" />
+    <None Remove="Sql\DeleteAdr.sql" />
+    <None Remove="Sql\GetStatistic.sql" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Sql\GetStatistic.sql" />
+    <EmbeddedResource Include="Sql\DeleteAdr.sql" />
     <EmbeddedResource Include="Sql\AddAdr.sql" />
     <EmbeddedResource Include="Sql\CreateTableAdrs.sql" />
   </ItemGroup>
